--- a/Bounce/Base.lproj/Main.storyboard
+++ b/Bounce/Base.lproj/Main.storyboard
@@ -20,12 +20,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zid-vu-wgP">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UfS-b1-K3R">
-                                    <size key="itemSize" width="75" height="75"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
+                                <collectionViewLayout key="collectionViewLayout" id="9CW-fd-zds"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvCell" id="vTP-eA-vuU">
                                         <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
@@ -55,13 +50,31 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="hb0-EK-uzg"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wUM-6g-LIU">
+                                <rect key="frame" x="525" y="562" width="55" height="30"/>
+                                <state key="normal" title="Remove"/>
+                                <connections>
+                                    <action selector="didTapRemove:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h1b-ZF-0Bw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jt0-s6-5Ly">
+                                <rect key="frame" x="20" y="562" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="didTapAdd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HYH-vH-Rbt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="zid-vu-wgP" secondAttribute="trailing" id="2It-Z6-mbx"/>
+                            <constraint firstItem="wUM-6g-LIU" firstAttribute="leading" secondItem="zid-vu-wgP" secondAttribute="trailing" constant="-75" id="8qa-z4-c8G"/>
                             <constraint firstItem="zid-vu-wgP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="G6e-SA-8to"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zid-vu-wgP" secondAttribute="bottom" id="NBH-2H-Fzg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jt0-s6-5Ly" secondAttribute="bottom" constant="8" id="p93-wU-WPU"/>
+                            <constraint firstItem="wUM-6g-LIU" firstAttribute="top" secondItem="zid-vu-wgP" secondAttribute="bottom" constant="-38" id="wTw-As-QYe"/>
                             <constraint firstItem="zid-vu-wgP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wcG-1V-3Bq"/>
+                            <constraint firstItem="zid-vu-wgP" firstAttribute="leading" secondItem="jt0-s6-5Ly" secondAttribute="trailing" constant="-50" id="yjq-o9-jUx"/>
                         </constraints>
                     </view>
                     <connections>
